---
source: prqlc/prql-compiler/src/semantic/resolver/mod.rs
expression: "resolve_lineage(r#\"\n            from orders\n            select {customer_no, gross, tax, gross - tax}\n            take 20\n            \"#).unwrap()"
---
columns:
  - Single:
      name:
        - orders
        - customer_no
      target_id: 89
      target_name: ~
  - Single:
      name:
        - orders
        - gross
      target_id: 90
      target_name: ~
  - Single:
      name:
        - orders
        - tax
      target_id: 91
      target_name: ~
  - Single:
      name: ~
      target_id: 92
      target_name: ~
inputs:
  - id: 88
    name: orders
    table:
      - default_db
      - orders

